yaml/aksarcfunc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aksarcfunc
  namespace: aksarcfunc
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: aksarcfunc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aksarcfunc
  namespace: aksarcfunc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aksarcfunc
  template:
    metadata:
      labels:
        app: aksarcfunc
    spec:
      containers:
      - name: aksarcfunc
        #image: liorkamrat/hello-arc:latest
        image: mrksdev/samples-functionapp
        ports:
        - containerPort: 8080
