yaml/aksarcfunc_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aksarcfunc-ingress
  namespace: aksarcfunc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: aksarcfunc
          servicePort: 8080
